16 Jul 2017
* Added extra check in vcastcsv2jenkins to cope with Function Calls being in
  header but not in the rest of the table

23 Jun 2017
* Added --force option to use of --release-locks
* Added option to use either HTML or TEXT format for the build description

6 Mar 2017
* add newlines at the end of single job scripts (windows and Linux) before the teardown lines
* Corrected check for missing BUILD_URL environment variable

